<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    android:backgroundTintMode="add"
    android:clipChildren="false"
    android:visibility="visible"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/text_toast_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:inputType = "number"
        android:text="0"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522" />

    <Button
        android:id="@+id/deeper_button"
        android:layout_width="274dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:backgroundTintMode="src_in"
        android:contentDescription="@string/to_secon_activity"
        android:text="@string/go_deeper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_toast_counter" />

    <Button
        android:id="@+id/toast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="256dp"
        android:onClick="onButtonTap"
        android:text="@string/toast_button"
        app:layout_constraintBottom_toTopOf="@+id/text_toast_counter"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/text_toast_counter"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/count_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="52dp"
        android:text="@string/count_button_text"
        app:layout_constraintBottom_toTopOf="@+id/textView_first"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="@+id/toast_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="@string/welcome_MainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/math_function_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:text="@string/mathfunction"
        app:layout_constraintBottom_toTopOf="@+id/textView_first"
        app:layout_constraintEnd_toStartOf="@+id/toast_button" />

</androidx.constraintlayout.widget.ConstraintLayout>